<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menuItemRename">Rename address</string>
    <string name="menuItemDelete">Delete address</string>
    <string name="menuItemShowOnMap">Show address on map</string>
    <string name="bNo">No</string>
    <string name="bOk">OK</string>
    <string name="bCancel">Cancel</string>
    <string name="bBack">Back</string>
    <string name="bMenu">Back to Menu</string>
    <string name="cancelOrderQuery">Cancel your order?</string>
    <string name="cancelOrderButton">Cancel Order</string>
    <string name="rejectOrderQuery">Are you sure you wish to reject?</string>
    <string name="rejectOrderButton">Reject</string>
    <string name="acceptOrderButton">Accept</string>
    <string name="PleaseWait">Please wait...</string>
    <string name="tvAboutUs">About us</string>
    <string name="tvCompanyInfo">""</string>
    <string name="tvOrderTitle">Order summary</string>
    <string name="tvClientLabel">Client</string>
    <string name="bEdit">Modify</string>
    <string name="bSaveAddress">Save to My Addresses</string>
    <string name="tvAddressLabel">Address</string>
    <string name="etStreetNo">No.</string>
    <string name="etBuilding">Bl.</string>
    <string name="etEntrance">Sc.</string>
    <string name="etAddressDetails">Other details</string>
    <string name="bSendOrder">Get me a TAXI!</string>
    <string name="tvOptions">Options</string>
    <string name="tvNumberOfCars">Number of cars</string>
    <string name="chHenriCoanda">DESTINATION HENRI COANDA AIRPORT</string>
    <string name="chOutsideBucharest">DESTINATION OUTSIDE BUCHAREST</string>
    <string name="tvPersonalInfo">Personal Info</string>
    <string name="tvName">First name*</string>
    <string name="tvSurname">Last Name*</string>
    <string name="tvPhone">Phone*</string>
    <string name="tvPlease">*Please fill in all the marked fields</string>
    <string name="tvEmail">Email</string>
    <string name="tvEmailDisclaimer">Enter your email to keep track of your taxi orders</string>
    <string name="tvFeedbackText">Any improvements, bugs or suggestions you need to tell us about? Write them all here!</string>
    <string name="tvFeedback">Any feedback or comments? Tell us here</string>
    <string name="bSendFeedback">Send feedback</string>
    <string name="bOrderOnline">GRAB TAXI NOW!</string>
    <string name="bPhoneOrder">Dispatch numbers</string>
    <string name="bInfo">About</string>
    <string name="bFeedback">Feedback</string>
    <string name="bHistory">History</string>
    <string name="tvMotto">Welcome to DroiDTaXi</string>
    <string name="bMyAddresses">MY ADDRESS</string>
    <string name="progressMapLoadDialogMessage">Loading map..</string>
    <string name="dialogLocationServicesMessage">"Location Services are not enabled, please go to Settings. For best results enable at least the wireless location provider and also activate your Wi-Fi."</string>
    <string name="bHome">Home</string>
    <string name="bDispatch">Dispatch</string>
    <string name="selectPositionSearch">Searching for address..</string>
    <string name="etAddress">Select your location</string>
    <string name="bOrder">Continue</string>
    <string name="progressNetLocationDialogMessage">Getting location..</string>
    <string name="bMap">Map</string>
    <string name="bSatellite">Satellite</string>
    <string name="tvChooseLocationTitle">Please note:</string>
    <string name="tvChooseLocation">"- Choose the exact pickup point by dragging the map
- Use a location accessible by car, otherwise your order could be rejected

- The automatically detected location is not accurate, it's just an APPROXIMATION
- For best results enable at least the wireless location provider and also activate your Wi-Fi"</string>
    <string name="cbDontShow">"I understand, don't show this again"</string>
    <string name="tvMyAddressesTitle">My address</string>
    <string name="tvNoAddresses">"You currently don't have any saved addresses."</string>
    <string name="btnAddAddress">Add address</string>
    <string name="notifOrderAccepted">Order accepted, click for details</string>
    <string name="notifOrderRejected">Order rejected, click for details</string>
    <string name="notifServiceUnavailable">Service unavailable, click for details</string>
    <string name="tvOrderHistory">History</string>
    <string name="bAddAdress">Add to My Addresses</string>
    <string name="bRateOrder">Rate journey</string>
    <string name="tvDate">Date:</string>
    <string name="tvIndicative">Indicative:</string>
    <string name="tvAddress">Address:</string>
    <string name="tvNoHistory">"You currently don't have any order in history."</string>
    <string name="tvOrder">Order in progress</string>
    <string name="tvSearching">"Searching for your cab..
Please wait until the search is over"</string>
    <string name="bAccept">Accept</string>
    <string name="bReject">Reject</string>
    <string name="bCancelOrder">Cancel order</string>
    <string name="tvRejected">"Sorry, the dispatch didn't fill your order."</string>
    <string name="tvRejectedMessage" />
    <string name="tvAccepted">Do you accept this car?</string>
    <string name="tvCarTitle">Car</string>
    <string name="tvConfirm">You confirmed your order, the car was dispatched to your location.</string>
    <string name="tvReject">You rejected the order.</string>
    <string name="tvTimeout">"The dispatch didn't respond to your request, please try again."</string>
    <string name="tvServiceUnavailable">"The service is momentarily unavailable.
We'll be up and running as soon as possible."</string>
    <string name="progressETADialogMessage">1 minute until taxi arrival</string>
    <string name="progressCarArrivalDialogMessage">Your taxi has arrived!</string>
    <string name="tvETA">arrives in</string>
    <string name="tvOrderCanceled">Order rejected</string>
    <string name="tvPhoneOrder">Dispatch Numbers</string>
    <string name="tvTap">Tap a star to rate</string>
    <string name="bSubmitRating">Submit rating</string>
    <string name="etHintRatingReview">Review(Optional)</string>
    <string name="CommError">Communication error, please try again later!</string>
    <string name="tvRenameAddress">Choose a new name for this address.</string>
    <string name="bRenameAddress">Rename address</string>
    <string name="tvSetAddressName">Choose a name for this location, it will appear in the \"My Addresses\" menu.</string>
    <string name="bSave">Save to My Addresses</string>
    <string name="app_name">Droid Taxi</string>
    <string name="companyName">Silver Wings Taxi</string>
    <string name="opt1" />
    <string name="opt2" />
    <string name="opt3" />
    <string name="opt4" />
    <string name="opt5" />
    <string name="opt6" />
    <string name="opt7" />
    <string name="opt8" />
    <string name="opt9" />
    <string name="selectPositionToast">Drag to choose pick-up location</string>
    <string name="streetNumberWarningToast">Please enter a street number</string>
    <string name="internetNotConnected">You are not connected to the Internet, please check your settings</string>
    <string name="feedbackThankYouToast">Thank you for your feedback!</string>
    <string name="MyAddressesInfoToast">Press to select, long-press for more options</string>
</resources>
