<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:gravity="center" 
    android:layout_gravity="center" 
    android:orientation="vertical" 
    android:background="@drawable/bgred" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:weightSum="6.0"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView 
        android:textSize="21.0sp" 
        android:textStyle="bold" 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:layout_gravity="center"
        android:id="@id/tvFeedback" 
        android:background="@color/bar_opaq_top" 
        android:paddingTop="7.0dip" 
        android:paddingBottom="7.0dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/tvFeedback" />
    <ImageView
        android:gravity="center" 
        android:id="@id/ivHeaderTransp" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:src="@drawable/header_transp" 
        android:scaleType="fitXY" 
        android:adjustViewBounds="true" />
    <TextView 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:id="@id/tvFeedbackText" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10.0dip" 
        android:layout_marginTop="5.0dip" 
        android:layout_marginRight="10.0dip" 
        android:layout_marginBottom="10.0dip" 
        android:text="@string/tvFeedbackText" />
    <LinearLayout 
        android:orientation="vertical" 
        android:id="@id/linearLayout4" 
        android:background="@drawable/bg_input_text_opinion" 
        android:layout_width="fill_parent" 
        android:layout_height="0.0dip" 
        android:layout_marginLeft="10.0dip" 
        android:layout_marginRight="10.0dip" 
        android:layout_weight="6.0">
        <EditText android:gravity="top" 
            android:id="@id/etFeedback" 
            android:background="@null" 
            android:padding="10.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            android:minLines="6">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <ImageView 
        android:gravity="center" 
        android:id="@id/ivFooterTransp" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:src="@drawable/footer_transp" 
        android:scaleType="fitXY" 
        android:adjustViewBounds="true" />
    <LinearLayout 
        android:orientation="vertical" 
        android:background="@color/bar_opaq_bottom" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center" 
            android:id="@id/linearLayout5" 
            android:paddingLeft="5.0dip" 
            android:paddingRight="5.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip" 
            android:layout_marginTop="5.0dip">
            <Button 
                android:textSize="20.0sp" 
                android:textColor="#ff000000" 
                android:id="@id/bSendFeedback" 
                android:background="@drawable/button_normal_selector" 
                android:layout_width="fill_parent" 
                android:layout_height="45.0dip" 
                android:text="@string/bSendFeedback" />
        </LinearLayout>
        <LinearLayout 
            android:id="@id/linearLayout2" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:weightSum="4.0">
            <Button android:textSize="10.0sp" 
                android:textStyle="bold" 
                android:textColor="#ffffffff" 
                android:gravity="bottom|center" 
                android:id="@id/bHome" 
                android:background="@drawable/button_nav_home_selector" 
                android:layout_width="0.0dip" 
                android:layout_height="45.0dip" 
                android:layout_marginLeft="3.0dip" 
                android:layout_marginTop="3.0dip" 
                android:layout_marginBottom="3.0dip" 
                android:text="@string/bHome" 
                android:layout_weight="1.0" />
            <Button 
                android:textSize="10.0sp" 
                android:textStyle="bold" 
                android:textColor="#ffffffff" 
                android:gravity="bottom|center" 
                android:id="@id/bPhoneOrder" 
                android:background="@drawable/button_nav_dispatch_selector" 
                android:layout_width="0.0dip" 
                android:layout_height="45.0dip" 
                android:layout_marginLeft="3.0dip" 
                android:layout_marginTop="3.0dip" 
                android:layout_marginBottom="3.0dip" 
                android:text="@string/bDispatch" 
                android:layout_weight="1.0" />
            <Button 
                android:textSize="10.0sp" 
                android:textStyle="bold" 
                android:textColor="#ffffffff" 
                android:gravity="bottom|center" 
                android:id="@id/bHistory" 
                android:background="@drawable/button_nav_history_selector" 
                android:layout_width="0.0dip" 
                android:layout_height="45.0dip" 
                android:layout_marginLeft="3.0dip" 
                android:layout_marginTop="3.0dip" 
                android:layout_marginBottom="3.0dip" 
                android:text="@string/bHistory" 
                android:layout_weight="1.0" />
            <Button 
                android:textSize="10.0sp" 
                android:textStyle="bold" 
                android:textColor="#ffffffff" 
                android:gravity="bottom|center" 
                android:id="@id/bFeedback" 
                android:background="@drawable/button_nav_opinion_pressed_selector" 
                android:layout_width="0.0dip" 
                android:layout_height="45.0dip" 
                android:layout_marginLeft="3.0dip" 
                android:layout_marginTop="3.0dip" 
                android:layout_marginRight="3.0dip" 
                android:layout_marginBottom="3.0dip" 
                android:text="@string/bFeedback" 
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>